[gd_scene load_steps=2 format=3 uid="uid://mainmenu_scene_id"]

[ext_resource type="Script" uid="uid://mainmenu_controller" path="res://scripts/ui/main_menu_controller.gd" id="1_mainmenu_controller"]

[node name="MainMenu" type="Control"]
script = ExtResource("1_mainmenu_controller")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 80.0
offset_right = 200.0
offset_bottom = 130.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "GlobeSweeper 3D"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DifficultyLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 160.0
offset_right = 100.0
offset_bottom = 185.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 18
text = "Select Difficulty"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DifficultyContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 200.0
offset_right = 150.0
offset_bottom = 230.0
grow_horizontal = 2
alignment = 1

[node name="EasyButton" type="Button" parent="DifficultyContainer"]
layout_mode = 2
text = "Easy"

[node name="MediumButton" type="Button" parent="DifficultyContainer"]
layout_mode = 2
text = "Medium"

[node name="HardButton" type="Button" parent="DifficultyContainer"]
layout_mode = 2
text = "Hard"

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = 20.0
offset_right = 80.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
text = "Start Game"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = 80.0
offset_right = 80.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
text = "Quit"